force-app/main/default/objects/custom_create206__c/custom_create206__c.object-meta.xml
<CustomObject>
    <label>Custom created object206</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects206</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>