force-app/main/default/objects/custom_create206__c/fields/custom_create_206field554__c.field-meta.xml
<CustomField>
    <fullName>custom_create_206field554__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 206field554</label>
    <type>Checkbox</type>
</CustomField>